--- a/main.html
+++ b/main.html
@@ -7,7 +7,43 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div class="calc-container">
+		<div class="input-container">
+			<input type="text" id="input">
+		</div>
+		<div class="blocks">
+			<div class="rows">
+				<button id="clr" class="colums">C</button>
+				<button id="divide" class="colums">/</button>
+				<button id="multiply" class="colums">*</button>
+				<button id="clear" class="colums">←</button>
+			</div>
+			<div class="rows">
+				<button id="block7" class="colums">7</button>
+				<button id="block8" class="colums">8</button>
+				<button id="block9" class="colums">9</button>
+				<button id="minus" class="colums ">-</button>
+			</div>
+			<div class="rows">
+				<button id="block4" class="colums">4</button>
+				<button id="block5" class="colums">5</button>
+				<button id="block6" class="colums">6</button>
+				<button id="plus" class="colums">+</button>
+			</div>
+			<div class="rows">
+				<button id="block1" class="colums">1</button>
+				<button id="block2" class="colums">2</button>
+				<button id="block3" class="colums">3</button>
+				<button id="dot" class="colums">.</button>
+			</div>
+			<div class="rows">
+				<button id="open" class="colums">(</button>
+				<button id="zero" class="colums">0</button>
+				<button id="close" class="colums">)</button>
+				<button id="ans" class="colums">=</button>
+			</div>
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
