--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
 			</div>
 			<div class="rows">
 				<button id="open" class="colums">(</button>
-				<button id="zero" class="colums">0</button>
+				<button id="block0" class="colums">0</button>
 				<button id="close" class="colums">)</button>
 				<button id="ans" class="colums">=</button>
 			</div>
